WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257999
:user-invalid triggering while typing date
https://bugs.webkit.org/show_bug.cgi?id=257999
Summary
:user-invalid triggering while typing date
Simon Welsh
Reported
2023-06-12 20:49:35 PDT
Created
attachment 466674
[details]
Example.html Typing a date into a <input type="date" /> field triggers validation for :user-invalid immediately, rather than on blur. Starting to type a date in the field in the attached example immediately shows a red border.
Attachments
Example.html
(276 bytes, text/html)
2023-06-12 20:49 PDT
,
Simon Welsh
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-06-12 21:50:33 PDT
<
rdar://problem/110687369
>
Aditya Keerthi
Comment 2
2023-12-17 19:45:25 PST
Pull request:
https://github.com/WebKit/WebKit/pull/21948
EWS
Comment 3
2023-12-20 06:59:41 PST
Committed
272346@main
(11990f0a5913): <
https://commits.webkit.org/272346@main
> Reviewed commits have been landed. Closing PR #21948 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug